BPER/DEVF/force-app/main/default/objects/CRM_Assenze__c/CRM_Assenze__c.object-meta.xml
<CustomObject>
    <label>Assenze</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Ferie Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assenze</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>