BPER/DEVF/force-app/main/default/objects/CRM_Assenze__c/fields/CC_Non_Pianificato__c.field-meta.xml
<CustomField>
    <fullName>CC_Non_Pianificato__c</fullName>
    <formula>(DAY(DATEVALUE(CreatedDate))&lt;15) 
&amp;&amp;
(MONTH(DATEVALUE(CRM_Inizioassenza__c))&lt;= MONTH(DATEVALUE(CreatedDate))) 

||

(DAY(DATEVALUE(CreatedDate))&gt;=15) 
&amp;&amp;
(DATEVALUE(CRM_Inizioassenza__c)&gt;= DATEVALUE(CreatedDate)) 
&amp;&amp;
(MONTH(DATEVALUE(CRM_Inizioassenza__c))&lt;= MONTH(DATEVALUE(ADDMONTHS(CreatedDate,1))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Pianificato</label>
    <type>Checkbox</type>
</CustomField>