BPER/DEVF/force-app/main/default/objects/CRM_Assenze__c/fields/CRM_FineAssenza__c.field-meta.xml
<CustomField>
    <fullName>CRM_FineAssenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fine Assenza</label>
    <type>DateTime</type>
</CustomField>