BPER/DEVF/force-app/main/default/objects/CRM_Assenze__c/fields/CRM_IdGenesys__c.field-meta.xml
<CustomField>
    <fullName>CRM_IdGenesys__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IdGenesys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>