BPER/DEVF/force-app/main/default/objects/CRM_Assenze__c/fields/CRM_Inizioassenza__c.field-meta.xml
<CustomField>
    <fullName>CRM_Inizioassenza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inizio assenza</label>
    <type>DateTime</type>
</CustomField>