BPER/DEVF/force-app/main/default/objects/CRM_Assenze__c/fields/CRM_IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>