BPER/DEVF/force-app/main/default/objects/CRM_Assenze__c/fields/CRM_SyncGenesysDelete__c.field-meta.xml
<CustomField>
    <fullName>CRM_SyncGenesysDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Genesys Delete</label>
    <type>Checkbox</type>
</CustomField>